@@ -1,5 +1,17 @@
 2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>
 
+	* capplet/nwam_profile_dialog.c (nwam_connection_cell_func):
+	2010-01-20 commit allows selected_ncp to be NULL, so fix the crash
+	in cell_func.
+	* common/nwamui_ncu.c:
+	* daemon/notify.c (nwam_notification_show_ncu_dup_address):
+	* daemon/notify.h:
+	* daemon/status_icon.c (ncu_notify_active): Fixed 14427 UI needs
+	to alert users for "Duplicate address detected" case when this
+	problem occurs
+
+2010-02-09  Lin Ma  <Lin.Ma@Sun.COM>
+
 	* common/nwamui_ncp.c (nwamui_ncp_set_property):
 	* common/nwamui_ncu.c (nwamui_ncu_set_property):
 	* common/nwamui_wifi_net.c (nwamui_object_real_set_handle):
